# fhempy

./: .gitattributes  .gitignore  10_BindingsIo.pm  CHANGED  CHANGELOG.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  TODO.md  control_pythonbinding.txt  controls_pythonbinding.txt  fhem_pythonbinding.service  fhempy.service  install_python.sh  install_systemd_fhempy.sh  manifest2pyproject.py  prepare_update.pl  pyproject.toml  pyproject2manifest.py  release.sh  requirements.txt  requirements_dev.txt  requirements_tests.txt  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: fhem_test.yml  release.yml  stale.yml  tests.yml  update_manifest.yml
FHEM/: 10_BindingsIo.pm  10_PythonBinding.pm  10_PythonModule.pm  10_fhempy.pm  10_fhempyServer.pm
FHEM/bindings/python/: __init__.py  fhempy  pythonbinding.py
FHEM/bindings/python/fhempy/: __init__.py
FHEM/bindings/python/fhempy/lib/: fhem.py  fhem_pythonbinding.py  generic.py  pkg_installer.py  utils.py  version.py
FHEM/bindings/python/fhempy/lib/aktionsfinder/: README.md  aktionsfinder.py
FHEM/bindings/python/fhempy/lib/alphaess/: README.md  alphaesscloud.py  manifest.json
FHEM/bindings/python/fhempy/lib/arp_presence/: README.md  arp_presence.py  manifest.json
FHEM/bindings/python/fhempy/lib/ble_monitor/: README.md  ble_monitor.py  blemonitor.py  bt_helpers.py  const.py  hcidump.py  helper.py  manifest.json
FHEM/bindings/python/fhempy/lib/ble_presence/: README.md  ble_presence.py  manifest.json
FHEM/bindings/python/fhempy/lib/ble_reset/: README.md  __init__.py  ble_reset.py  manifest.json
FHEM/bindings/python/fhempy/lib/blue_connect/: README.md  __init__.py  blue_connect.py  manifest.json
FHEM/bindings/python/fhempy/lib/bt_presence/: README.md  bt_presence.py  manifest.json
FHEM/bindings/python/fhempy/lib/core/: __init__.py  ble.py  bluetoothctl.py  bluetoothle.py  manifest.json  ssdp.py  zeroconf.py
FHEM/bindings/python/fhempy/lib/ddnssde/: README.md  ddnssde.py  manifest.json
FHEM/bindings/python/fhempy/lib/discover_ble/: discover_ble.py  manifest.json
FHEM/bindings/python/fhempy/lib/discover_mdns/: discover_mdns.py  manifest.json
FHEM/bindings/python/fhempy/lib/discover_upnp/: discover_upnp.py  manifest.json
FHEM/bindings/python/fhempy/lib/dlna_dmr/: dlna_dmr.py  manifest.json
FHEM/bindings/python/fhempy/lib/energie_gv_at/: README.md  energie_gv_at.py
FHEM/bindings/python/fhempy/lib/eq3bt/: README.md  __init__.py  connection.py  eq3bt.py  eq3btsmart.py  manifest.json  structures.py
FHEM/bindings/python/fhempy/lib/erelax_vaillant/: README.md  erelax_vaillant.py  manifest.json
FHEM/bindings/python/fhempy/lib/esphome/: README.md  __init__.py  esphome.py  manifest.json
FHEM/bindings/python/fhempy/lib/fhem_forum/: README.md  fhem_forum.py
FHEM/bindings/python/fhempy/lib/fusionsolar/: README.md  const.py  fusionsolar.py  fusionsolar_api.py  manifest.json
FHEM/bindings/python/fhempy/lib/geizhals/: README.md  geizhals.py  manifest.json
FHEM/bindings/python/fhempy/lib/gfprobt/: gfprobt.py  manifest.json
FHEM/bindings/python/fhempy/lib/github_backup/: README.md  github_backup.py
FHEM/bindings/python/fhempy/lib/github_restore/: README.md  github_restore.py
FHEM/bindings/python/fhempy/lib/goodwe/: README.md  goodwe.py  manifest.json
FHEM/bindings/python/fhempy/lib/google_weather/: README.md  google_weather.py  manifest.json
FHEM/bindings/python/fhempy/lib/googlecast/: README.md  googlecast.py  manifest.json
FHEM/bindings/python/lib/: fhem.py  fhem_pythonbinding.py  generic.py  pkg_installer.py  utils.py
FHEM/bindings/python/lib/ble_presence/: README.md  __init__.py  ble_presence.py  manifest.json
FHEM/bindings/python/lib/ble_reset/: README.md  __init__.py  ble_reset.py
FHEM/bindings/python/lib/blescanner/: blescanner.py
FHEM/bindings/python/lib/bt_presence/: __init__.py  bt_presence.py  manifest.json
FHEM/bindings/python/lib/core/: zeroconf.py
FHEM/bindings/python/lib/discover_ble/: discover_ble.py
FHEM/bindings/python/lib/discover_mdns/: discover_mdns.py
FHEM/bindings/python/lib/discover_upnp/: __init__.py  discover_upnp.py  manifest.json
FHEM/bindings/python/lib/dlna_dmr/: __init__.py  dlna_dmr.py
FHEM/bindings/python/lib/eq3bt/: README.md  __init__.py  connection.py  eq3bt.py  eq3btsmart.py  manifest.json  structures.py
FHEM/bindings/python/lib/esphome/: __init__.py  esphome.py  manifest.json
FHEM/bindings/python/lib/gfprobt/: __init__.py  gfprobt.py
FHEM/bindings/python/lib/googlecast/: README.md  googlecast.py  manifest.json
FHEM/bindings/python/lib/helloworld/: helloworld.py
FHEM/bindings/python/lib/mdnsscanner/: mdnsscanner.py
FHEM/bindings/python/lib/miflora/: README.md  __init__.py  miflora.py
FHEM/bindings/python/lib/miio/: README.md  __init__.py  miio.py
FHEM/bindings/python/lib/mitemp/: README.md  __init__.py  mitemp.py
FHEM/bindings/python/lib/nespresso_ble/: README.md  __init__.py  manifest.json  nespresso.py  nespresso_ble.py
FHEM/bindings/python/lib/object_detection/: README.md  __init__.py  object_detection.py
FHEM/bindings/python/lib/ring/: __init__.py  manifest.json  ring.py
FHEM/bindings/python/lib/ring_doorbell/: ring_doorbell.py
FHEM/bindings/python/lib/wienerlinien/: README.md  __init__.py  wienerlinien.py
FHEM/bindings/python/lib/xiaomi_gateway3/: __init__.py  gateway3.py  manifest.json  miio_fix.py  mqttudp_bidir_gate.py  unqlite.py  utils.py  xiaomi_gateway3.py
FHEM/bindings/python/lib/xiaomi_gateway3_device/: manifest.json  xiaomi_gateway3_device.py
FHEM/bindings/python/lib/xiaomi_tokens/: __init__.py  xiaomi_tokens.py
FHEM/bindings/python/tests/: test_modules_basic.py  test_utils.py
FHEM/bindings/python/tests/mocked/: test_modules_basic.py  test_update.py  test_utils.py
FHEM/bindings/python/tests/utils/: mock_fhem.py
bindings/python/: pythonbinding.py
bindings/python/lib/: fhem.py
bindings/python/lib/googlecast/: googlecast.py
bindings/python/lib/mdnsscanner/: mdnsscanner.py
t/FHEM/10_BindingsIo/: 00_load.t  01_define.t  fhem.cfg
(+189 files in other folders)
