[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fhempy"
description = "Python binding for FHEM to support Python modules"
version = "0.1.722"
authors = [ "Dominik Karall <dominik.karall@gmail.com>",]
readme = "README.md"
homepage = "https://github.com/fhempy/fhempy"
[[tool.poetry.packages]]
include = "fhempy"
from = "FHEM/bindings/python"

[tool.semantic_release]
build_command = "pip install poetry && poetry build"
version_variables = [ "FHEM/bindings/python/fhempy/lib/version.py:__version__",]
version_toml = [ "pyproject.toml:tool.poetry.version",]

[tool.setuptools]
include-package-data = true
script-files = [ "FHEM/bindings/python/bin/fhempy",]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fhempy/fhempy/issues"
Sponsorship = "https://github.com/sponsors/fhempy"

[tool.poetry.scripts]
fhempy = "fhempy.lib.fhem_pythonbinding:run"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "==12.0"
importlib_metadata = "7.0.1"
pycryptodomex = "3.20.0"
ifaddr = "==0.2.0"
zeroconf = "==0.130.0"
markdown2 = "2.4.12"
requests = "2.31.0"
async-upnp-client = "0.38.1"
packaging = "23.2"
pexpect = "==4.9.0"
aiofiles = "==23.2.1"

[tool.setuptools.package-data]
"*" = [ "README.md",]

[tool.poetry.dependencies.aiohttp]
extras = [ "speedups",]
version = "3.9.3"

[tool.poetry.group.all]
optional = true

[tool.setuptools.packages.find]
where = [ "FHEM/bindings/python",]
exclude = [ "tests*",]

[tool.poetry.group.all.dependencies]
GitPython = "==3.1.41"
aioblescan = "==0.2.14"
aiohomekit = "==2.6.16"
aionefit = "==0.14"
async-upnp-client = "==0.38.1"
asyncio_mqtt = "==0.16.2"
beautifulsoup4 = "==4.12.3"
bleak = "==0.20.2"
bleparser = "==3.7.1"
bluepy = "==1.3.0"
bluetooth-adapters = "==0.16.2"
bluetooth-auto-recovery = "==1.3.0"
bt_proximity = "==0.2.1"
btsocket = "==0.2.0"
construct = "==2.10.70"
cryptography = "==42.0.2"
esphome = "==2023.12.9"
goodwe = "==0.3.0"
greeclimate = "==1.4.1"
huawei-solar = "==2.2.9"
hyundai_kia_connect_api = "==3.17.3"
janus = "==1.0.0"
luma-led-matrix = "==1.7.1"
lxml = "==5.1.0"
meross-iot = "==0.4.6.0"
micloud = "==0.6"
miflora = "==0.7.2"
mitemp-bt = "==0.0.5"
mytoyota = "==1.1.0"
netifaces = "==0.11.0"
opencv-python-headless = "==4.9.0.80"
paho-mqtt = "==1.6.1"
pexpect = "==4.9.0"
pillow = "==10.2.0"
playwright = "==1.41.1"
pychromecast = "==13.1.0"
pygatt = "==4.0.5"
pyit600 = "==0.5.1"
pyjwt = "==2.8.0"
pyprusalink = "==2.0.1"
pyric = "==0.1.6.3"
python-dateutil = "==2.8.2"
python-miio = "==0.5.12"
pyTibber = {version = "==0.28.2", python = "^3.10" }
pytz = "==2023.3.post1"
rctclient = "==0.0.3"
ring_doorbell = "==0.8.5"
RPi-GPIO = "==0.7.1"
seatconnect = "==1.1.9"
setuptools = "==69.0.3"
six = "==1.16.0"
skodaconnect = "==1.3.10"
spotipy = "==2.23.0"
tflite-runtime = "==2.14.0"
tuya-connector-python = "==0.1.2"
tuya-iot-py-sdk = "==0.6.6"
vaillant-netatmo-api = "==0.11.0"
warema-wms-controller = "==0.2.4"
xmodem = "==0.4.7"
youtube_dl = "==2021.12.17"






[tool.poetry.group.dev.dependencies]
tox = "4.12.1"
pytest = "8.0.0"
pytest-env = "1.1.0"
pytest-mock = "3.11.1"
pytest-asyncio = ">=0.21.1,<0.24.0"
requests-mock = "1.11.0"
pyyaml = "==6.0.1"
