[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fhempy"
description = "Python binding for FHEM to support Python modules"
version = "0.1.745"
authors = [ "Dominik Karall <dominik.karall@gmail.com>",]
readme = "README.md"
homepage = "https://github.com/fhempy/fhempy"
[[tool.poetry.packages]]
include = "fhempy"
from = "FHEM/bindings/python"

[tool.semantic_release]
build_command = "pip install poetry && poetry build"
version_variables = [ "FHEM/bindings/python/fhempy/lib/version.py:__version__",]
version_toml = [ "pyproject.toml:tool.poetry.version",]

[tool.setuptools]
include-package-data = true
script-files = [ "FHEM/bindings/python/bin/fhempy",]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fhempy/fhempy/issues"
Sponsorship = "https://github.com/sponsors/fhempy"

[tool.poetry.scripts]
fhempy = "fhempy.lib.fhem_pythonbinding:run"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "==12.0"
importlib_metadata = "7.1.0"
pycryptodomex = "3.20.0"
ifaddr = "==0.2.0"
zeroconf = "==0.132.2"
markdown2 = "2.4.13"
requests = "2.32.2"
async-upnp-client = "0.38.3"
packaging = "24.0"
pexpect = "==4.9.0"
aiofiles = "==23.2.1"

[tool.setuptools.package-data]
"*" = [ "README.md",]

[tool.poetry.dependencies.aiohttp]
extras = [ "speedups",]
version = "3.9.5"

[tool.poetry.group.all]
optional = true

[tool.setuptools.packages.find]
where = [ "FHEM/bindings/python",]
exclude = [ "tests*",]

[tool.poetry.group.all.dependencies]
GitPython = "==3.1.43"
aioblescan = "==0.2.14"
aiohomekit = "==2.6.16"
aionefit = "==0.14"
alphaessopenapi = "==0.0.7"
async-upnp-client = "==0.38.3"
asyncio_mqtt = "==0.16.2"
beautifulsoup4 = "==4.12.3"
bleak = "==0.20.2"
bleparser = "==3.7.1"
bluepy = "==1.3.0"
bluetooth-adapters = "==0.16.2"
bluetooth-auto-recovery = "==1.4.2"
bt_proximity = "==0.2.1"
btsocket = "==0.3.0"
construct = "==2.10.70"
cryptography = "==43.0.0"
esphome = "==2024.12.2"
goodwe = "==0.4.8"
greeclimate = "==1.4.1"
httpx = "==0.27.0"
huawei-solar = "==2.2.9"
hyundai_kia_connect_api = "==3.19.1"
janus = "==1.0.0"
luma_led-matrix = "==1.7.1"
lxml = "==5.2.1"
meross-iot = "==0.4.7.1"
micloud = "==0.6"
miflora = "==0.7.2"
mitemp-bt = "==0.0.5"
mytoyota = "==1.1.0"
netifaces = "==0.11.0"
opencv-python-headless = "==4.9.0.80"
paho-mqtt = "==1.6.1"
pexpect = "==4.9.0"
pillow = "==10.4.0"
playwright = "==1.43.0"
# remove pytibber from here as it requires websockets < 12.0
# pyTibber = {version = "==0.29.0", python = "^3.11" }
# pybluez 0.30 wasn't released yet, we use the github tag
# pybluez = "==0.30"
pychromecast = "==13.1.0"
pygatt = "==4.0.5"
pyit600 = "==0.5.1"
pyjwt = "==2.8.0"
# pymyenergi fails to resolve by poetry
# pymyenergi = "==0.1.1"
pyprusalink = "==2.1.1"
pyqrcode = "==1.2.1"
pyric = "==0.1.6.3"
python-dateutil = "==2.9.0.post0"
python-miio = "==0.5.12"
pytz = "==2024.1"
rctclient = "==0.0.3"
ring_doorbell = "==0.8.5"
rpi_gpio = "==0.7.1"
seatconnect = "==1.1.9"
setuptools = "==70.0.0"
six = "==1.16.0"
skodaconnect = "==1.3.10"
spotipy = "==2.23.0"
tflite-runtime = "==2.14.0"
tuya-connector-python = "==0.1.2"
tuya-device-sharing-sdk = "==0.2.1"
tuya-iot-py-sdk = "==0.6.6"
vaillant-netatmo-api = "==0.11.0"
warema-wms-controller = "==0.2.4"
xmodem = "==0.4.7"
youtube_dl = "==2021.12.17"

[tool.poetry.group.dev.dependencies]
tox = "4.15.1"
pytest = "8.2.2"
pytest-env = "1.1.3"
pytest-mock = "3.14.0"
pytest-asyncio = ">=0.21.1,<0.26.0"
requests-mock = "1.12.1"
pyyaml = "==6.0.2"
